ui: add ngrx/store

--- a/ui/package.json
+++ b/ui/package.json
@@ -33,6 +33,8 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.1",
+    "@ngrx/effects": "^20.0.1",
+    "@ngrx/store-devtools": "^20.0.1",
     "@tailwindcss/postcss": "^4.1.13",
     "express": "^5.1.0",
     "postcss": "^8.5.6",
