--- a/ui/package.json
+++ b/ui/package.json
@@ -36,8 +36,9 @@
     "@ngrx/effects": "^20.0.1",
     "@ngrx/store-devtools": "^20.0.1",
     "@tailwindcss/postcss": "^4.1.13",
+    "dompurify": "^3.2.7",
     "express": "^5.1.0",
-    "marked": "^16.3.0",
+    "micromark": "^4.0.2",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.13",
