--- a/ui/package.json
+++ b/ui/package.json
@@ -36,11 +36,18 @@
     "@ngrx/effects": "^20.0.1",
     "@ngrx/store-devtools": "^20.0.1",
     "@tailwindcss/postcss": "^4.1.13",
-    "dompurify": "^3.2.7",
+    "@types/hast": "^3.0.4",
     "express": "^5.1.0",
-    "micromark": "^4.0.2",
+    "hastscript": "^9.0.1",
     "postcss": "^8.5.6",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.2",
     "rxjs": "~7.8.0",
+    "shiki": "^3.13.0",
     "tailwindcss": "^4.1.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -49,6 +56,7 @@
     "@angular/build": "^20.3.1",
     "@angular/cli": "^20.3.1",
     "@angular/compiler-cli": "^20.3.0",
+    "@shikijs/rehype": "^3.13.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
