be: added postgresql repo

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,7 @@
 PORT=8080
 LLM_API_ENDPOINT="http://localhost:11434/api"
+
+DB_DSN="postgres://mcp:Cucibaju123@localhost:5432/mcp"
+DB_MAX_OPEN_CONNS=25
+DB_MAX_IDLE_CONNS=25
+DB_MAX_IDLE_TIME="15m"
