added resume builder and reafctor layout

--- a/ui/package.json
+++ b/ui/package.json
@@ -37,9 +37,12 @@
     "@ngrx/store-devtools": "^20.0.1",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/hast": "^3.0.4",
+    "@types/quill": "^2.0.14",
     "express": "^5.1.0",
     "hastscript": "^9.0.1",
+    "ngx-quill": "^28.0.1",
     "postcss": "^8.5.6",
+    "quill": "^2.0.3",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
