--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
     "@types/quill": "^2.0.14",
     "express": "^5.1.0",
     "hastscript": "^9.0.1",
+    "immer": "^10.2.0",
     "ngx-quill": "^28.0.1",
     "postcss": "^8.5.6",
     "quill": "^2.0.3",
