--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
     "@angular/material": "^20.2.3",
+    "@angular/material-moment-adapter": "^20.2.3",
     "@angular/platform-browser": "^20.3.0",
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
@@ -41,6 +42,7 @@
     "express": "^5.1.0",
     "hastscript": "^9.0.1",
     "immer": "^10.2.0",
+    "moment": "^2.30.1",
     "ngx-quill": "^28.0.1",
     "postcss": "^8.5.6",
     "quill": "^2.0.3",
